Changed layout, additional styles
